<resources>
    <string name="app_name">GWC COUTURE</string>

    <string name="indicator">indicator</string>

    //onboarding
    <string name="onBoardingText1">Design an amazing outfit for \n Professional events </string>
    <string name="onBoardingText2">select from different deign styles \n or \n request your own personal design</string>
    <string name="onBoardingText3">Get your job delivered faster \n and efficient</string>

    <string name="onBoardingTitle1">Professional design styles</string>
    <string name="onBoardingTitle2">quality and Amazing List</string>
    <string name="onBoardingTitle3">Reliability and efficiency</string>

    <string name="next_onboarding_text">NEXT</string>
    <string name="start_onboarding_text">START</string>
    <string name="company_logo">company logo</string>
    <string name="ladies_wears">Ladies Wears</string>
    <string name="male_wears">Male Wears</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me"><u>ABOUT ME</u></string>
    <string name="about_me_detail">My name is Godswill Cosmos, the operational director of GWC COUTURE,
        a brand that is poised to delivering quality male and female attires. I make unisex designers shirts, senator wears,
    agbada, danshiki, suits, ties and male cloth accessories. I also design for special occasions.</string>
    <string name="contact_me"><u>CONTACT ME</u></string>
    <string name="female_native_wear">Female Native Wear</string>
    <string name="price_is_negotiable">Price is Negotiable</string>
    <string name="twitter_logo">twitter logo</string>
    <string name="facebook_logo">facebook logo</string>
    <string name="linkedin_logo">linkedin logo</string>
    <string name="price"><u>PRICE</u></string>
    <string name="currency_naira">\u20A6</string>
    <string name="all">All</string>
    <string name="trousers">Trousers</string>
    <string name="shirts">Shirts</string>
    <string name="search">Search</string>
    <string name="my_email">+2348180340255, +2348060115551</string>
    <string name="my_phone">godswillcosmos86@gmail.com</string>
    <string name="brand_name">GWC COUTURE</string>
    <string name="register">Register</string>

    <string-array name="cloths">
        <item>Shirt</item>
        <item>Trouser</item>
        <item>Complete</item>
    </string-array>
</resources>