<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.female.FemaleFragment">

    <TextView
        android:id="@+id/ladies_wears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sura"
        android:text="@string/ladies_wears"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/splash_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_logo"/>

    <EditText
        android:id="@+id/female_search_placeHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ladies_wears"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/search_shape"
        android:clickable="false"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        app:drawableTint="@color/gray"
        android:focusable="false"
        android:hint="@string/search"
        android:padding="12dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/femaleClothSwipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/female_search_placeHolder"
        android:layout_marginTop="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/female_wear_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fitsSystemWindows="true"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/female_wear_list_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_female_wear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="8dp"
        app:tint="@color/white" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKit"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        app:SpinKit_Color="@color/colorPrimary"/>


</RelativeLayout>